src/objects/PMAPS__c.object
<CustomObject>
    <description>Used to track and manage external correspondences including, but not limited to: RFP, RFI, 15C.  Integrates with PMAPS WebPro.</description>
    <fields>
        <fullName>Business_Channel__c</fullName>
        <label>Business Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - ME/SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Prospect_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client/Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PMAPS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Prospect_Name_2__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client/Prospect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Tier__c</fullName>
        <formula>Text(Opportunity__r.Account.Institutional_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Organization_2__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PMAPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant_Tier__c</fullName>
        <formula>Text(Opportunity__r.Account.Institutional_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_In__c</fullName>
        <formula>IF((Date_Due__c -TODAY())&gt;365,&apos;More than a year&apos;,IF((Date_Due__c -TODAY())&gt;180,&apos;More than 6 months&apos;,IF((Date_Due__c -TODAY())&gt;90,&apos;More than 3 months&apos;,IF((Date_Due__c -TODAY())&gt;30,&apos;More than a month&apos;,IF((Date_Due__c -TODAY())&gt;15,&apos;With in a month&apos;,IF((Date_Due__c -TODAY())&gt;7,&apos;Fortnight&apos;,
IF((Date_Due__c -TODAY())&gt;0,&apos;In a week&apos;,&apos;Past Due&apos;)
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Tier__c</fullName>
        <formula>TEXT(
Org_Name__r.Institutional_Tier__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>PMAPS requires a text field to integrate with PMAPS WebPro.  This was required to convert Opportunity Amount, currency field, to a text field. This field is updated via a workflow rule.  This is to remain off of the page layout.</description>
        <label>Opportunity Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PMAPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFPs (Org Name)</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMAPS_Proposal_Id__c</fullName>
        <description>This field is from PMAPS, is hidden and for integration use only.</description>
        <label>PMAPS Proposal Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMAPS_Sales_Person_Name__c</fullName>
        <formula>Sales_Person_Relationship_Manager__r.LastName &amp; &quot;, &quot; &amp; Sales_Person_Relationship_Manager__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMAPS Sales Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance - General Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Decommissioning Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised (40 Act)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Linked Insurance Plan (ULIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEBA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <label>RFP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Team__c</fullName>
        <label>RFP Team</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Declined__c</fullName>
        <inlineHelpText>Required if &apos;RFP Declined&apos; is checked</inlineHelpText>
        <label>Reason Declined</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>15C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Research Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush_Delivery__c</fullName>
        <formula>IMAGE(IF(
CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7),
0 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Date_Due__c - Datevalue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Date_Due__c - Datevalue(CreatedDate) )/7)*5)&lt;=5, &quot;img/samples/flag_red.gif&quot;,&quot;&quot; ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rush Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person/Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PMAPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_RM_Email__c</fullName>
        <inlineHelpText>autofill based on &apos;Sales Person/Relationship Manager&apos;</inlineHelpText>
        <label>Sales/RM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_RM_Phone__c</fullName>
        <inlineHelpText>autofill based on &apos;Sales Person/Relationship Manager&apos;</inlineHelpText>
        <label>Sales/RM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <inlineHelpText>autofill based on &apos;Secondary MFS Contact&apos;</inlineHelpText>
        <label>Secondary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <inlineHelpText>autofill based on &apos;Secondary MFS Contact&apos;</inlineHelpText>
        <label>Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_MFS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary MFS Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Your_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Your Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <formula>CreatedBy.LastName &amp; &apos;, &apos; &amp;  CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Your Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Your Phone</label>
        <type>Text</type>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>Active_RFPs</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>RFP_Status__c</columns>
        <columns>Date_Due__c</columns>
        <columns>Sales_Person_Relationship_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Received</value>
        </filters>
        <label>Active RFPs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Prospect_Name2__c</columns>
        <columns>Date_Due__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Rush_Delivery__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RFP-{0000}</displayFormat>
        <label>RFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_if_RFP_Not_Persued_is_checked</fullName>
        <active>true</active>
        <description>If the RFP is not pursued, then users need to enter a reason.</description>
        <errorConditionFormula>AND(ISBLANK( Reason_Declined__c ), RFP_Declined__c = True)</errorConditionFormula>
        <errorDisplayField>Reason_Declined__c</errorDisplayField>
        <errorMessage>Required if &apos;RFP Not Pursued&apos; is checked</errorMessage>
    </validationRules>
</CustomObject>